# PyxelSand

./: README.md  pyproject.toml
sand_game/: Environment.py  PlaySpace.py  __main__.py
sand_game/behaviours/: Behaviour.py  EphemeralBehaviour.py  FallBehaviour.py  FlammableBehaviour.py
sand_game/particles/: BaseParticle.py  FireParticle.py  Particle.py  SandParticle.py  WallParticle.py
tests/: test_environment.py  test_playspace.py  test_sand_game.py
