[tool.poetry]
name = "sand-game"
version = "0.1.0"
description = ""
authors = ["Harry Peach <harrypeach1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyxel = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylama = "^7.7.1"
autopep8 = "^1.5.6"
expects = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
